--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "vite build"
   },
   "dependencies": {
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "babel-preset-nano-react-app": "^0.1.0",
+    "sass": "^1.52.2",
     "vite": "^2.6.7"
   },
   "babel": {
